--- a/index.html
+++ b/index.html
@@ -1,9 +1,101 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tea Cozy</title>
+    <link rel="stylesheet" type="text/css" href="./Resources/CSS/index.css">
+</head>
 <body>
-  <h1>Ian</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <div class="header">
+            <img class="logo" src="./Resources/Images/img-tea-cozy-logo.png" alt="logo">
+            <nav>
+                <ul class="nav_links">
+                    <li>
+                        <a href="#">Mission</a>
+                    </li>
+                    <li>
+                        <a href="#">Featured Tea</a>
+                    </li>
+                    <li>
+                        <a href="#">Locations</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="first_section">
+            <div class="mission">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustanaible, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </section>
+        <section class="second_section">
+            <div class="heading">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h4>
+            </div>
+            <div class="featured_tea">
+                <div class="first_tea">
+                    <img class="image" src="./Resources/Images/img-berryblitz.jpg" alt="berry">
+                    <h4>Fall Berry Blitz Tea</h4>
+                </div>
+                <div class="second_tea">
+                    <img class="image" src="./Resources/Images/img-spiced-rum.jpg" alt="spiced rum">
+                    <h4>Spiced Rum Tea</h4>
+                </div>
+                <div class="seasonal_donut">
+                    <img class="image" src="./Resources/Images/img-donut.jpg" alt="donut">
+                    <h4>Seasonal Donut</h4>
+                </div>
+                <div class="third_tea">
+                    <img class="image" src="./Resources/Images/img-myrtle-ave.jpg" alt="myrtle">
+                    <h4>Myrtle Ave Tea</h4>
+                </div>
+                <div class="fourth_tea">
+                    <img class="image" src="./Resources/Images/img-bedford-bizarre.jpg" alt="bedford">
+                    <h4>Bedford Bizzare Tea</h4>
+                </div>
+            </div>
+        </section>
+        <section class="third_section">
+            <div class="loc">
+                <h2>Locations</h2>
+            </div>
+            <div class="locations">
+                <div class="downtown">
+                    <h3>Downtown</h3>
+                    <h4>384 West 4th St</h4>
+                    <h4>Suite 108</h4>
+                    <h4>Portland, Maine</h4>
+                </div>
+                <div class="east">
+                    <h3>East Bayside</h3>
+                    <h4>3433 Phisherman's Avenue</h4>
+                    <h4>(Northwest Corner)</h4>
+                    <h4>Portland, Maine</h4>
+                </div>
+                <div class="oakdale">
+                    <h3>Oakdale</h3>
+                    <h4>515 Crescent Avenue</h4>
+                    <h4>Second Floor</h4>
+                    <h4>Portland, Maine</h4>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="head">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
+        <div class="copyright">
+            <h5>copyright The Tea Cozy 2017</h5>
+        </div>
+    </footer>
 </body>
- 
 </html>
